# rename-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: event_handler.rs  main.rs
