[package]
name = "rename-bot"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Discord bot for enforcing chaos"
readme = "README.md"
homepage = "https://github.com/ewpratten/rename-bot"
repository = "https://github.com/ewpratten/rename-bot"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "^0.11.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "builder",
    "cache",
    "http",
    "utils",
    "voice",
    "cache"
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.1"

[profile.release]
lto = true
codegen-units = 1